--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -20,7 +20,7 @@
         <nav>
             <img src="images/logo.png" alt="logo" class="logo">
             <div class="nav-btn">
-                <button class="eng-btn">English</button>
+                <button class="eng-btn"><i class="fa-solid fa-globe"></i>English<i class="fa-solid fa-caret-down"></i></button>
                 <button class="sign-in-btn">Sign In</button>
             </div>
         </nav>
@@ -34,8 +34,11 @@
             <br>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <br>
+            <div class="cover-btn">
             <input type="email" name="email" placeholder="Email address" class="email-btn">
-            <button class="get-started-btn">Get Started</button>
+            
+            <button class="get-started-btn">Get Started <i class="fa-solid fa-angle-right"></i></button>
+            </div>
         </div>
 
 
@@ -172,7 +175,7 @@
             </p>
             <br>
             <input type="email" name="email" placeholder="Email address" class="email-btn">
-            <button class="get-started-btn">Get Started</button>
+            <button class="get-started-btn" id="GS2">Get Started</button>
 
         </div>
 
@@ -210,7 +213,7 @@
             </div>
 
         </div>
-        <button class="eng-btn">English</button>
+        <button class="eng-btn"><i class="fa-solid fa-globe"></i>English<i class="fa-solid fa-caret-down"></i></button>
         <p>Netflix India</p>
 
     </div>
